feat: configurando swagger, ajustando migrations (null no end_time) e adicionando ListAppointmentsByUser
